Revert "Fixed word break in notification body"

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -223,7 +223,7 @@ h3 i { margin-right: 5px; }
 .ui-notifications-title img { border: 1px solid #3BAFDA; border-radius: 3px; margin-right: 5px; vertical-align: middle; }
 .ui-notifications-title { font-size: 13px; border-bottom: 1px solid #3BAFDA; padding: 5px 10px; color: white; background-color: #3BAFDA; }
 .ui-notifications-padding { padding: 0 10px; }
-.ui-notifications-body { line-height: 14px; font-size: 12px; margin-top: 10px; word-break: break-word; }
+.ui-notifications-body { line-height: 14px; font-size: 12px; margin-top: 10px; }
 .ui-notifications button { display: inline-block; position: relative; border-radius: 2px; outline: 0; font-size: 11px; color: white; font-weight: bold; padding: 2px 10px; margin-bottom: 10px; border: 1px solid white; background: transparent; }
 .ui-notifications button:hover { opacity: 0.9; }
 .ui-notifications-remove { transform: scale(0.5); opacity: 0; }
